Closed
Bug 1923330
Opened 1 year ago
Closed 1 year ago
ModuleLoaderBase.h: -Werror=changes-meaning declaration of ‘using JS::loader::ModuleLoaderBase::ModuleLoadRequest = class JS::loader::ModuleLoadRequest’ changes meaning of ‘ModuleLoadRequest’ [-Werror=changes-meaning]
Categories
(Developer Infrastructure :: Source Code Analysis, defect)
Developer Infrastructure
Source Code Analysis
Tracking
(firefox133 fixed)
RESOLVED
FIXED
133 Branch
| Tracking | Status | |
|---|---|---|
| firefox133 | --- | fixed |
People
(Reporter: Sylvestre, Assigned: sergesanspaille)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
In file included from /root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/ModuleLoader.h:11,
from /root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/ScriptLoader.h:30,
from /root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/WorkerPrivate.h:12,
from /root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/ProcessIsolation.h:15,
from /root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/CanonicalBrowsingContext.h:14,
from /root/firefox-gcc-last/accessible/ipc/DocAccessibleParent.cpp:14,
from Unified_cpp_accessible_ipc0.cpp:11:
/root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/include/js/loader/ModuleLoaderBase.h:288:9: error: declaration of ‘using JS::loader::ModuleLoaderBase::ModuleLoadRequest = class JS::loader::ModuleLoadRequest’ changes meaning of ‘ModuleLoadRequest’ [-Werror=changes-meaning]
288 | using ModuleLoadRequest = JS::loader::ModuleLoadRequest;
| ^~~~~~~~~~~~~~~~~
| Assignee | ||
Comment 1•1 year ago
|
||
Updated•1 year ago
|
Assignee: nobody → sguelton
Status: NEW → ASSIGNED
Updated•1 year ago
|
Attachment #9429608 -
Attachment description: Bug 1923330 - Reorder using declaration to prevent -Wchanges-meaning warning r=jonco → Bug 1923330 - Reorder using declaration to prevent -Wchanges-meaning warning r=jonco!
Pushed by sguelton@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c10e5324fc57
Reorder using declaration to prevent -Wchanges-meaning warning r=jonco
Comment 3•1 year ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
status-firefox133:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 133 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•