Bug 1923330 - Reorder using declaration to prevent -Wchanges-meaning warning r=jonco

Differential Revision: https://phabricator.services.mozilla.com/D224935